syntax = "proto3";

package auth;


service CredentialsService {
    rpc ChangeRoleUserOnAdmin(ChangeRoleUser) returns(NotificationMessage);
}


message NotificationMessage {
    string message = 1;
}


message ChangeRoleUser {
    string admin_token = 1;
    string username = 2;
    string email = 3;
}
